Replaced get(0) method to getFirst()